<resources>
    <string name="app_name">ObjectEdgeStore</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="unknown_error">Unknown Error</string>
    <string name="server_error">Server currently is unavailable</string>
    <string name="parser_error">Parser error</string>
    <string name="no_internet_error">"No internet connection. Object Edge Store application can't work without internet"</string>
    <string name="server_not_respond">"Object Edge Store is unavailable now. Do you want to try one more time?"</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>

    <string name="sign_in_title">Sign in or shop as a quest</string>
    <string name="sign_in">SIGN IN / JOIN NOW</string>
    <string name="shop_as_guest">SHOP AS GUEST</string>

    <string name="categories">Categories</string>
    <string name="my_account">My Account</string>
    <string name="my_profile">My Profile</string>
    <string name="address_book">Address Book</string>
    <string name="payment_info">Payment Info</string>
    <string name="my_orders">My Orders</string>
    <string name="logout">Logout</string>
    <string name="brands">Brands</string>
    <string name="favourites">Favourites</string>
    <string name="help">Help</string>
    <string name="gift_card">Gift Card</string>
    <string name="feedback">Feedback</string>

    <string name="menu">Menu</string>
    <string name="newIn">New</string>
    <string name="deals">Deals</string>
    <string name="recommended">Recommended</string>
    <string name="info">Payment Info</string>
    <string name="item_added_to_favorites">Item added to Favorites</string>
    <string name="item_removed_from_favorites">Item removed from Favorites</string>
    <string name="there_are_no_items_in_your_favorites">There are no items in your Favorites</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="title_activity_login_register">LoginRegisterActivity</string>

    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="add_payment_info">Add Payment Info</string>
    <string name="checkout">Checkout</string>
    <string name="add_shipping_info">Add Shipping Info</string>
    <string name="sub_total">Subtotal</string>
    <string name="discount">Discount</string>
    <string name="shipping">Shipping</string>
    <string name="total">Total</string>

    <string name="title">Title*</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="country">Country*</string>
    <string name="address_line_1">Address Line 1*</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city_town">City/Town*</string>
    <string name="postal_code">Postal Code*</string>
    <string name="state">State*</string>
    <string name="telephone">Telephone*</string>
    <string name="required">*Required</string>
    <string name="please_select">Please Select</string>
    <string name="this_field_is_mandatory">This field is mandatory</string>
    <string name="email_address_with_asterisk">Email Address*</string>
    <string name="this_is_in_case_of_delivery_problems">This is in case of delivery problems</string>
    <string name="address_info_is_the_same">My shipping and billing address are the same</string>
    <string name="shipping_address_1">1. Shipping Address</string>
    <string name="billing_address">Billing Address</string>
    <string name="shipping_total_2">2. Shipping Total</string>
    <string name="shipping_method">Shipping Method*</string>
    <string name="special_instructions">SPECIAL INSTRUCTIONS</string>
    <string name="payment_method_3">3. Payment Method</string>
    <string name="use_gift_card">USE GIFT CARD</string>
    <string name="gift_card_number">Gift Card Number</string>
    <string name="pin_number">Pin Number</string>
    <string name="remove">REMOVE</string>
    <string name="credit_card">CREDIT CARD</string>
    <string name="paypal">PAYPAL</string>
    <string name="phone_order">PHONE ORDER</string>
    <string name="card_type">Card Type*</string>
    <string name="credit_card_number">Credit Card Number*</string>
    <string name="card_holders_first_name">Card Holder\'s First Name*</string>
    <string name="card_holders_last_name">Card Holder\'s Last Name*</string>
    <string name="create_a_nickname">Create a nickname for this card*</string>
    <string name="expiration_date">Expiration Date*</string>
    <string name="ccv_code">CCV Code*</string>
    <string name="what_is_this">WHAT IS THIS?</string>
    <string name="phone_order_credit_card_over_the_phone">Phone Order - Credit card over the phone or bank deposit.</string>
    <string name="phone_capitalized">PHONE</string>
    <string name="after_completing_your_purchase">After completing your purchase you will receive an email with details on how to finalize the payment.</string>
    <string name="your_cart">Your Cart</string>
    <string name="edit_cart">EDIT CART</string>
    <string name="complete_purchase">COMPLETE PURCHASE</string>
    <string name="by_clicking_complete">By clicking complete purchase you confirm that you read, understood, and accept our terms and conditions.</string>
    <string name="returns_policy">Returns Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="and">and</string>
    <string name="fifty_dollars">$50.00</string>
    <string name="there_are_no_items_in_your_cart">No items in your cart</string>

</resources>
