<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="@dimen/standard_padding">
    <!--
    <TextView
        android:id="@+id/address_label_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/extra_big_padding"
        android:text="@string/email_address_with_asterisk"
        android:gravity="center_vertical"
        style="@style/Text.Black.H16"/>

    <TextView
        android:id="@+id/address_label_this_is"
        android:layout_width="match_parent"
        android:layout_height="@dimen/extra_big_padding"
        android:text="@string/this_is_in_case_of_delivery_problems"
        android:gravity="center_vertical"
        style="@style/Text.Black.H14"/>

    <EditText
        android:id="@+id/address_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_item_height"
        android:paddingLeft="@dimen/standard_padding"
        android:singleLine="true"/>
    -->

    <TextView
            android:id="@+id/address_title_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/extra_big_padding"
            android:text="@string/title"
            android:gravity="center_vertical"
            style="@style/Text.Black.H14"/>

    <Spinner
            android:id="@+id/address_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/standard_item_height"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/address_first_name"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:hint="@string/first_name"
                android:singleLine="true"
                android:inputType="text"
                android:imeOptions="actionNext"
                style="@style/Text.Blue.H16.Bold"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/address_last_name"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:hint="@string/last_name"
                android:singleLine="true"
                android:inputType="text"
                android:imeOptions="actionNext"
                style="@style/Text.Blue.H16.Bold"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/extra_big_padding"
            android:text="@string/country"
            android:gravity="center_vertical"
            style="@style/Text.Black.H14"/>

    <Spinner
            android:id="@+id/address_country"
            android:layout_width="match_parent"
            android:layout_height="@dimen/standard_item_height"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/address_line_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/address_line_1"
                android:singleLine="true"
                android:inputType="text"
                android:imeOptions="actionNext"
                style="@style/Text.Blue.H16.Bold"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/address_line_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/address_line_2"
                android:singleLine="true"
                android:inputType="text"
                android:imeOptions="actionNext"
                style="@style/Text.Blue.H16.Bold"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/address_city_town"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/city_town"
                android:singleLine="true"
                android:inputType="text"
                android:imeOptions="actionNext"
                style="@style/Text.Blue.H16.Bold"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/address_postal_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/postal_code"
                android:singleLine="true"
                android:inputType="number"
                android:imeOptions="actionNext"
                style="@style/Text.Blue.H16.Bold"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/address_state"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/state"
                android:singleLine="true"
                android:inputType="text"
                android:imeOptions="actionNext"
                style="@style/Text.Blue.H16.Bold"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/address_telephone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/telephone"
                android:singleLine="true"
                android:inputType="phone"
                style="@style/Text.Blue.H16.Bold"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/extra_big_padding"
            android:text="@string/required"
            android:gravity="center_vertical"
            style="@style/Text.Black.H14"/>

</LinearLayout>