<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/payment_block_credit_card_layout"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/extra_big_padding"
            android:text="@string/card_type"
            android:gravity="center_vertical"
            android:padding="@dimen/small_padding"
            style="@style/Text.Black.H12"/>

    <Spinner
            android:id="@+id/payment_block_card_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/payment_block_credit_card_number"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:hint="@string/credit_card_number"
                android:singleLine="true"
                android:inputType="number"
                android:digits=" 1234567890"
                android:maxLength="22"
                android:imeOptions="actionNext"
                style="@style/Text.Blue.H16.Bold"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/payment_block_card_first_name"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:hint="@string/card_holders_first_name"
                android:singleLine="true"
                android:inputType="text"
                android:imeOptions="actionNext"
                style="@style/Text.Blue.H16.Bold"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/payment_block_card_last_name"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:hint="@string/card_holders_last_name"
                android:singleLine="true"
                android:inputType="text"
                android:imeOptions="actionNext"
                style="@style/Text.Blue.H16.Bold"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/extra_big_padding"
            android:text="@string/expiration_date"
            android:gravity="center_vertical"
            android:padding="@dimen/small_padding"
            style="@style/Text.Black.H12"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:orientation="horizontal">

        <Spinner
                android:id="@+id/payment_block_expiration_month"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/standard_padding"/>

        <Spinner
                android:id="@+id/payment_block_expiration_year"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/small_padding">

            <EditText
                    android:id="@+id/payment_block_ccv_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/ccv_code"
                    android:singleLine="true"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    style="@style/Text.Blue.H16.Bold"/>

        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/payment_block_what_is_this"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/extra_small_padding"
                android:background="@drawable/orange_button_shape"
                android:text="@string/what_is_this"
                style="@style/Text.White.H16.Bold"/>

    </LinearLayout>

</LinearLayout>
