<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <RadioGroup
            android:id="@+id/payment_block_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <RadioButton
                android:id="@+id/payment_block_credit_card_rb"
                android:layout_width="0dp"
                android:layout_height="@dimen/action_bar_height"
                android:layout_weight="0.33"
                android:layout_marginRight="@dimen/small_padding"
                android:background="@drawable/radio_button_shape"
                android:textColor="@color/radio_button_text_color"
                android:text="@string/credit_card"
                android:gravity="center_horizontal|center_vertical"
                android:textStyle="bold"
                android:button="@null"
                android:checked="true"/>

        <RadioButton
                android:id="@+id/payment_block_paypal_rb"
                android:layout_width="0dp"
                android:layout_height="@dimen/action_bar_height"
                android:layout_weight="0.33"
                android:layout_marginRight="@dimen/small_padding"
                android:background="@drawable/radio_button_shape"
                android:textColor="@color/radio_button_text_color"
                android:text="@string/paypal"
                android:gravity="center_horizontal|center_vertical"
                android:textStyle="bold"
                android:button="@null"/>

        <RadioButton
                android:id="@+id/payment_block_phone_order_rb"
                android:layout_width="0dp"
                android:layout_height="@dimen/action_bar_height"
                android:layout_weight="0.33"
                android:background="@drawable/radio_button_shape"
                android:textColor="@color/radio_button_text_color"
                android:text="@string/phone_order"
                android:gravity="center_horizontal|center_vertical"
                android:textStyle="bold"
                android:button="@null"
                android:visibility="gone"/>
    </RadioGroup>

    <com.objectedge.store.ui.views.CreditCardBlockView
            android:id="@+id/payment_block_credit_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:id="@+id/payment_block_paypal_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/standard_padding"
            android:paddingRight="@dimen/standard_padding"
            android:visibility="gone">

        <ImageView
                android:id="@+id/payment_block_paypal_checkout_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/action_bar_height"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center_horizontal|center_vertical"
                android:layout_marginTop="@dimen/standard_padding"
                android:layout_marginBottom="@dimen/standard_padding"
                android:background="@drawable/paypal"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/payment_block_phone_order_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_padding"
            android:visibility="gone">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_order_credit_card_over_the_phone"
                android:layout_marginBottom="@dimen/standard_padding"/>

        <Button
                android:id="@+id/payment_block_phone_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/standard_item_height"
                android:text="@string/phone_capitalized"
                style="@style/Text.White.H16.Bold"
                android:layout_marginBottom="@dimen/standard_padding"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/after_completing_your_purchase"/>
    </LinearLayout>
</LinearLayout>