<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <ImageView
        android:id="@+id/signInLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/object_edge_long"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/signInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard_padding"
        android:text="@string/sign_in_title"
        style="@style/Text.Blue.H14.Bold"
        android:layout_below="@+id/signInLogo"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="@dimen/login_button_width"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard_padding"
        android:layout_marginTop="@dimen/standard_padding"
        android:text="@string/sign_in"
        style="@style/Text.White.H16.Bold"
        android:background="@drawable/orange_button_shape"
        android:layout_below="@+id/signInTitle"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/shopAsQuestButton"
        android:layout_width="@dimen/login_button_width"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:text="@string/shop_as_guest"
        style="@style/Text.White.H16.Bold"
        android:background="@drawable/orange_button_shape"
        android:layout_below="@+id/signInButton"
        android:layout_centerHorizontal="true"/>

    <ProgressBar
        android:id="@+id/signProgress"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/standard_padding"
        android:visibility="gone"/>

</RelativeLayout>
